[tool.poetry]
name = "absa"
version = "0.1.0"
description = ""
authors = ["Y.Shamel <Youssef.fawzy@crowdanalyzer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
pyabsa = "^2.4.1.post1"
numpy = "1.26.4"
boto3 = "^1.34.155"
spacy = "^3.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
